2do commit, header listo

--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
         <div class="textos-hero">
           <h1 class="weight-600">
             Convertimos tus sueños <span class="weight-400">en realidad</span>
-            <p>
-              Amet consectetur adipisicing elit. Laudantium soluta consequatur
-              quia ut quod velit voluptatibus ducimus dolores aspernatur,
-              explicabo repellat provident. Adipisci, quasi eum?
-            </p>
-            <a href="#" class="cta">Contáctame</a>
           </h1>
+
+          <p>
+            Amet consectetur adipisicing elit. Laudantium soluta consequatur
+            quia ut quod velit voluptatibus ducimus dolores aspernatur,
+            explicabo repellat provident. Adipisci, quasi eum?
+          </p>
+          <a href="#" class="cta">Contáctame</a>
         </div>
         <div class="img-hero">
-          <img src="./img/undraw_dev_focus_b9xo.svg" alt="Imagen desarrollo" />
+          <img
+            src="./img/undraw_dev_focus_b9xo.svg"
+            alt="Imagen desarrollo"
+            class="img"
+          />
         </div>
       </div>
     </header>
