--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
           <div class="items">
             <div class="item">
               <i class="far fa-lightbulb"></i>
-              <h3 class="titulo-srvices">Lorem ipsum dolor sit.</h3>
+              <h3 class="titulo-services">Lorem ipsum dolor sit.</h3>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
             </div>
             <div class="item">
               <i class="far fa-money-bill-alt"></i>
 
-              <h3 class="titulo-srvices">Lorem ipsum dolor sit.</h3>
+              <h3 class="titulo-services">Lorem ipsum dolor sit.</h3>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
             </div>
             <div class="item">
               <i class="far fa-chart-bar"></i>
 
-              <h3 class="titulo-srvices">Lorem ipsum dolor sit.</h3>
+              <h3 class="titulo-services">Lorem ipsum dolor sit.</h3>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
             </div>
           </div>
@@ -102,7 +102,7 @@
             </p>
           </div>
           <div class="texto-mission">
-            <h3>01 Startups</h3>
+            <h3>02 Processes</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint
               odio distinctio ea deserunt sed sit, minima ratione quas deleniti
@@ -110,7 +110,7 @@
             </p>
           </div>
           <div class="texto-mission">
-            <h3>01 Startups</h3>
+            <h3>03 Design</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint
               odio distinctio ea deserunt sed sit, minima ratione quas deleniti
@@ -131,23 +131,25 @@
     <!-- Footer -->
     <footer>
       <div class="grid">
-        <h2 class="subtitulo">Contáctame</h2>
-        <div class="footer-item1">
+        <div class="textos-footer">
+          <h2 class="subtitulo">Contáctame</h2>
+        </div>
+        <div class="footer-item">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
-        <div class="footer-item2">
+        <div class="footer-item">
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
-        <div class="footer-item3">
+        <div class="footer-item">
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
-        <div class="footer-item4">
+        <div class="footer-item">
           <a href="#">
             <i class="fab fa-instagram"></i>
           </a>
