to commit, media queries ok

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h3>03 Design</h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint
-              odio distinctio ea deserunt sed sit, minima ratione quas deleniti
+              odioimg-mission distinctio ea deserunt sed sit, minima ratione quas deleniti
               aperiam.
             </p>
           </div>
